    changes to the API for both the calculation engine and the Java
    user interface.

    For general highlights of the changes between releases, see
    HIGHLIGHTS.txt in the same directory as this file.

Version 2.5  [ (under development) ]
    ENGINE:
        Overall structure:
            - Replaced hand-rolled container classes with Standard
              Template Library classes (transition only partially complete).
            - Replaced strstreams with stringstreams.
            - Modified to also build under gcc3.
        Classes NBoolVector, NHashSet, NInfiniteArray, NIntMap,
                NOrderedPair, NPointerSet, NQueue, NSet, NStack,
                NStringPair and associates:
            - All removed in favour of Standard Template Library classes.
        Class FuncDelete, FuncNew, FuncNewClonePtr, FuncNewCopyPtr,
                FuncNewCopyRef, HashPointer:
            - Added for use with Standard Template Library.
        Class NGroupExpressionTerm:
            - Changed from simple ordered pair to its own full class.
        Class NLocalFileResource:
            - Replaced static members MODE_READ, MODE_WRITE with static
              routines sysModeRead(), sysModeWrite().
        Class NScript:
            - Changed list of variables to a proper map and removed routines
              getVariableIndex() and removeVariableAt().
            - Insistance on unique variable names; in enforcing this
              routine addVariable() now returns bool.
        Class NSignature, NSigCensus, NSigPartialIsomorphism:
            - Added.
        Class NString:
            - Added C++ string copy constructor.
        Class NTriangulation:
            - Added insertSplittingSurface().
    JAVA USER INTERFACE:
        Overall structure:
            - Incorporated engine enhancements listed above.

Version 2.4  [ 4 April, 2002 ]
    OVERALL:
        - Much enhanced documentation.
        - Added SnapPea census and knot/link census to examples.